# exrun

./: .gitignore  README.md  plan.md  pyproject.toml
sample_html_css_course/: README.md  exercises.toml  exrun.toml  package-lock.json  package.json  playwright.config.js  progress.db
sample_html_css_course/exercises/01_html_basics/: exercise.toml  problem.md
sample_html_css_course/exercises/02_css_fundamentals/: exercise.toml  problem.md
sample_html_css_course/exercises/03_layout_positioning/: exercise.toml  problem.md
sample_html_css_course/exercises/04_responsive_design/: exercise.toml  problem.md
sample_html_css_course/exercises/05_interactive_components/: exercise.toml  problem.md
sample_html_css_course/test-results/: .last-run.json
sample_pytorch_course/: .exrun.toml  exercises.toml  exrun.toml  progress.db
sample_pytorch_course/exercises/01_tensor_basics/: exercise.toml  problem.md
sample_pytorch_course/exercises/02_tensor_operations/: exercise.toml  problem.md
sample_pytorch_course/exercises/03_linear_layer/: exercise.toml  problem.md
sample_pytorch_course/exercises/04_simple_network/: exercise.toml  problem.md
sample_react_course/: .exrun.toml  exercises.toml  exrun.toml  package-lock.json  package.json  progress.db  tsconfig.json  vitest.config.ts
sample_typescript_course/: .exrun.toml  exercises.toml  exrun.toml  package-lock.json  package.json  progress.db  tsconfig.json  vitest.config.ts
src/exrun/: __init__.py  __main__.py  cli.py  exercise.py  models.py  progress.py  runner.py  watcher.py
src/exrun/adapters/: __init__.py  base.py  (+6 more)
(+55 files in other folders)
