[project]
name = "exrun"
version = "0.1.0"
description = "Multi-language exercise runner with test gating"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.28.0",
    "playwright>=1.57.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.scripts]
exrun = "exrun.cli:app"

[project.optional-dependencies]
pytorch = [
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exrun"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
